WIP add jsoup to parse and transform notes content (currently public app only)

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -8,6 +8,11 @@ h2 > .label {
   vertical-align: top;
 }
 
+.underlined {
+  text-decoration: underline;
+}
+
+
 .breadcrumb {
   border-top: 1px solid #FFF;
   .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
