WIP: add preview of the parsed notes to the frontend readonly notes view;

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -473,3 +473,25 @@ div.progress-container {
     margin: 0;
   }
 }
+
+
+#notes {
+  .subrecord-form-fields {
+    .tabbable {
+      .nav-tabs {
+        margin: 0;
+      }
+      .tab-content {
+        background-color: white;
+        padding: 10px;
+        border-left: 1px solid #ddd;
+        border-top: 1px solid #ddd;
+        border-right: 1px solid #ddd;
+        border-bottom: none;
+      }
+    }
+  }
+  .render-underline {
+    text-decoration: underline;
+  }
+}
