--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -8,11 +8,6 @@ h2 > .label {
   vertical-align: top;
 }
 
-.underlined {
-  text-decoration: underline;
-}
-
-
 .breadcrumb {
   border-top: 1px solid #FFF;
   .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
@@ -470,6 +465,10 @@ pre {
   }
 }
 
+// Notes
+.render-underline {
+  text-decoration: underline;
+}
 #component_switch {
   border-bottom: 1px @hrBorder solid;
   padding: @baseLineHeight/2 0;
