Fix for twitter bootstrap bug causing breadcrumb li's to float over one another (#295)

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -18,6 +18,12 @@ h2 > .label {
 }
 
 .breadcrumb {
+  // patch to fix inline-block issue in IE8
+  // https://github.com/twitter/bootstrap/issues/5455
+  li {
+    margin-right: 1px;
+  }
+
   margin-top: -@baseLineHeight;
   #gradient > .vertical(#efefef, #eaeaea);
   padding: 5px 10px;
