--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -10,6 +10,13 @@ h2 > .label {
 
 .breadcrumb {
   border-top: 1px solid #FFF;
+
+  // patch to fix inline-block issue in IE8
+  // https://github.com/twitter/bootstrap/issues/5455
+  li {
+    margin-right: 1px;
+  }
+
   .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
 
   .return-to-search {
