--- a/frontend/app/assets/stylesheets/archivesspace.less
+++ b/frontend/app/assets/stylesheets/archivesspace.less
@@ -7,6 +7,7 @@
 @import "archivesspace/form";
 @import "archivesspace/tables";
 @import "archivesspace/tree";
+@import "archivesspace/notes";
 @import "datepicker";
 @import "combobox";
 @import "../../codemirror/codemirror.css";
