--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -73,6 +73,11 @@
           }
         }
       }
+      &.cut-to-clipboard {
+        > ins, > a {
+          .opacity(50);
+        }
+      }
     }
 
     a {
