--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -11,7 +11,8 @@
       :rapid_data_entry => {
         :type => :archival_object,
         :action_label =>  I18n.t("resource._frontend.action.rapid_data_entry")
-      }
+      },
+      :can_accept_paste_from_clipboard => :archival_object
     },
     :archival_object => {
       :can_add_child => {
@@ -29,7 +30,9 @@
       :rapid_data_entry => {
         :type => :archival_object,
         :action_label =>  I18n.t("resource._frontend.action.rapid_data_entry")
-      }
+      },
+      :can_accept_paste_from_clipboard => :archival_object,
+      :can_cut_to_clipboard => :archival_object
     },
     :digital_object => {
       :can_add_child => {
@@ -230,6 +233,16 @@
             </a>
           {/if}
         </div>
+      {if rules.hasOwnProperty("can_accept_paste_from_clipboard") || rules.hasOwnProperty("can_cut_to_clipboard")}
+        <div class="btn-group">
+          {if rules.hasOwnProperty("can_cut_to_clipboard") && rules.can_cut_to_clipboard}
+            <a href="#" class="btn btn-mini cut-node disabled">Cut</a>
+          {/if}
+          {if rules.hasOwnProperty("can_accept_paste_from_clipboard") && rules.can_accept_paste_from_clipboard}
+            <a href="#" class="btn btn-mini paste-node disabled">Paste</a>
+          {/if}
+        </div>
+      {/if}
       {if rules.hasOwnProperty("can_move")}
         <div class="btn-group dropdown move-node-menu">
           <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#" title="Move">
