--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -66,11 +66,17 @@
       }
       &.selected {
         > a {
+          background-color: #d9f4ff;
           > .tree-node-text {
             .field-column {
               background-color: transparent !important;
             }
           }
+        }
+      }
+      &.primary-selected {
+        > a {
+          background-color: #beebff;
         }
       }
       &.cut-to-clipboard {
