Show the "Merge" button in the edit forms of subjects and agents too.

--- a/frontend/app/assets/javascripts/merge_dropdown.js.erb
+++ b/frontend/app/assets/javascripts/merge_dropdown.js.erb
@@ -9,6 +9,11 @@ $(function () {
   $(".merge-action").on("click", function(event) {
     event.preventDefault();
     event.stopImmediatePropagation();
+
+    if ($(this).attr('disabled')) {
+      return;
+    }
+
     if ($(".merge-form")[0].style.display === "block") {
       // Hide it
       $(".merge-form").css("display", "");
