--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -468,6 +468,14 @@ div.progress-container {
 .merge-form {
   padding: 10px;
 
+  .controls {
+    margin-left: 0;
+  }
+  .control-label {
+    width: 80%;
+    text-align: left;
+    margin-left: 0;
+  }
   form {
     margin: 0;
   }
