--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -7,6 +7,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9">
+        <%= render :partial => "toolbar" %>
         <div class="record-pane">
           <h2><%= @subject.title %>  <span class="label label-info"><%= I18n.t("subject._singular") %></span></h2>
           <br/>
