--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -120,11 +120,8 @@
         }
       }
 
-      &:hover, &.jstree-clicked {
-        .badge {
-          .transition(opacity 0.5s);
-          .opacity(100);
-        }
+      &.jstree-clicked {
+        background-color: transparent;
       }
     }
 
