--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -1,7 +1,10 @@
 <% if @search_data.results? %>
-  <table class="table table-striped table-bordered table-condensed table-hover table-sortable">
+  <table class="table table-striped table-bordered table-condensed table-hover table-sortable table-search-results" <% if allow_multi_select? %>data-multiselect="true"<% end %>>
     <thead>
     <tr>
+      <% if allow_multi_select? %>
+        <th></th>
+      <% end %>
       <% if params[:linker]==='true' %>
         <th></th>
       <% end %>
@@ -38,6 +41,11 @@
       deleted = (params.has_key?("deleted_uri") and params["deleted_uri"] === result["id"]) || false
     %>
       <tr class="<%= "deleted" if deleted %>">
+        <% if allow_multi_select? %>
+          <td class="multiselect-column">
+            <%= check_box_tag "multiselect-item", result["id"], false %>
+          </td>
+        <% end %>
         <% if params[:linker] === 'true' %>
           <td>
             <%= radio_button_tag "linker-item", result["id"], false, :"data-object" => result.to_json %>
