--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -394,15 +394,7 @@ $(function() {
 
         $tree.jstree("move_node", "#"+$selected.attr("id"), "#" + $(this).data("target-node-id"), target_index);
 
-        // rerender toolbar actions!
-        loadTreeActionsForNode($selected)
-
         $("a:first", $selected).focus();
-      });
-      $tree.on("multiplenodesselected.aspace", function() {
-        $(".move-node", "#archives_tree_toolbar").addClass("disabled");
-      }).on("singlenodeselected.aspace", function() {
-          $(".move-node", "#archives_tree_toolbar").removeClass("disabled");
       });
 
       // TRANSFER STUFF
@@ -463,7 +455,6 @@ $(function() {
 
           var $target = getPrimarySelectedNode();
 
-          //moveNode($("#"+$tree.data("clipboard")), $target, 0);
           $tree.jstree("move_node", $tree.data("clipboard"), "#"+$target.attr("id"));
           $tree.data("clipboard", null);
           $(this).addClass("disabled");
@@ -516,35 +507,37 @@ $(function() {
 
     };
 
-    var lastMoveData;
     var moveNodes = function(jstreeMoveData) {
-      var nodeEl = $(jstreeMoveData.rslt.cr[0]);
+      var targetNodeEl = $(jstreeMoveData.rslt.cr[0]);
       var data_for_post = {
         children: $.makeArray(jstreeMoveData.rslt.o.map(function(i, moved) {return $(moved).data("uri")})),
         index: jstreeMoveData.rslt.cp
       };
 
       $.ajax({
-        url: APP_PATH+nodeEl.attr("rel")+"s/"+nodeEl.data("id")+"/accept_children",
+        url: APP_PATH+targetNodeEl.attr("rel")+"s/"+targetNodeEl.data("id")+"/accept_children",
         type: "POST",
         data: data_for_post,
         success: function(data) {
-          // If the reparented record's form is open, update its
-          // hidden field.
-          if (nodeEl.data("id").toString() === $("form input#id").val()) {
+          var $selected = getPrimarySelectedNode();
+
+          // If the reparented record's form is open, update its hidden field.
+          if ($selected.data("id").toString() === $("form input#id").val()) {
             var hiddenInput = $("input.hidden-parent-uri", $container);
 
             if (data.parent) {
-              hiddenInput.attr('name', nodeEl.attr("rel") + '[parent][ref]');
+              hiddenInput.attr('name', $selected.attr("rel") + '[parent][ref]');
               hiddenInput.val(data.parent);
             } else {
-              hiddenInput.attr('name', nodeEl.attr("rel")+ '[parent]');
+              hiddenInput.attr('name', $selected.attr("rel")+ '[parent]');
               hiddenInput.val(null);
             }
+
+            $("#"+$selected.attr("rel")+"_position_", $container).val($selected.index());
           }
 
-          var selectedNode = $tree.jstree("get_selected");
-          $("#"+selectedNode.attr("rel")+"_position_", $container).val(selectedNode.index());
+          // Also update the node's toolbar actions (as the move actions may have become out of sync)
+          loadTreeActionsForNode($selected);
         },
         error: function(jqXHR, textStatus, errorThrown) {
           // Rollback the last move.
@@ -555,49 +548,6 @@ $(function() {
         }
       });
     };
-    var moveNode = function(nodeEl, targetNodelEl, newIndex, jstreeMoveData) {
-      var parent_id = "";
-      lastMoveData = jstreeMoveData;
-
-      if (nodeEl.attr("rel") === targetNodelEl.attr("rel")) {
-        parent_id = targetNodelEl.data("id");
-      }
-
-      $.ajax({
-        url: APP_PATH+nodeEl.attr("rel")+"s/"+nodeEl.data("id")+"/parent",
-        type: "POST",
-        data: {
-          parent: parent_id,
-          index: newIndex
-        },
-        success: function(data) {
-          // If the reparented record's form is open, update its
-          // hidden field.
-          if (nodeEl.data("id").toString() === $("form input#id").val()) {
-            var hiddenInput = $("input.hidden-parent-uri", $container);
-
-            if (data.parent) {
-              hiddenInput.attr('name', nodeEl.attr("rel") + '[parent][ref]');
-              hiddenInput.val(data.parent);
-            } else {
-              hiddenInput.attr('name', nodeEl.attr("rel")+ '[parent]');
-              hiddenInput.val(null);
-            }
-          }
-
-          var selectedNode = $tree.jstree("get_selected");
-          $("#"+selectedNode.attr("rel")+"_position_", $container).val(selectedNode.index());
-        },
-        error: function(jqXHR, textStatus, errorThrown) {
-          // Rollback the last move.
-          $.jstree.rollback(lastMoveData.rlbk);
-
-          // show a modal message
-          AS.openQuickModal(AS.renderTemplate("tree_unable_to_move_message_template"), jqXHR.responseText);
-        }
-      });
-    }
-
 
     var confirmChanges = function(targetNodeEl) {
       var parentIdFornew;
@@ -766,7 +716,6 @@ $(function() {
 
             if ($tree.jstree("get_selected").length > 1) {
               $tree.jstree("get_selected").addClass("selected");
-              $tree.trigger("multiplenodesselected.aspace");
             } else if ($tree.jstree("get_selected").length === 1) {
               var $selectedNode = $($tree.jstree("get_selected")[0]);
               $(".primary-selected", $tree).removeClass("primary-selected");
@@ -776,14 +725,9 @@ $(function() {
               } else {
                 setHashForNode($selectedNode.find("a").attr("href"));
               }
-              $tree.trigger("singlenodeselected.aspace");
             }
         }).bind("move_node.jstree", function(event, data) {
-          if (data.rslt.o.length > 1) {
-            moveNodes(data);
-          } else {
-            moveNode(data.rslt.o, data.rslt.cr, data.rslt.o.index(), data);
-          }
+          moveNodes(data);
         }).bind("refreshtreenode.aspace", function(event, data) {
 
           var nodeId = data.jsonmodel_type+"_"+data.id;
