--- a/frontend/app/views/classification_terms/_edit_inline.html.erb
+++ b/frontend/app/views/classification_terms/_edit_inline.html.erb
@@ -18,6 +18,7 @@
     <% if @refresh_tree_node
         node_data = {
           'id' => @classification_term.id,
+          'uri' => @classification_term.uri,
           'title' => @classification_term.title,
           'jsonmodel_type' => @classification_term.jsonmodel_type,
           'node_type' => @classification_term.jsonmodel_type,
