--- a/frontend/app/views/classifications/_edit_inline.html.erb
+++ b/frontend/app/views/classifications/_edit_inline.html.erb
@@ -19,6 +19,7 @@
     <% if @refresh_tree_node
          node_data = {
            'id' => @classification.id,
+           'uri' => @classification.uri,
            'title' => @classification.title,
            'jsonmodel_type' => @classification.jsonmodel_type,
            'node_type' => @classification.jsonmodel_type,
