--- a/frontend/app/views/digital_object_components/_edit_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_edit_inline.html.erb
@@ -18,6 +18,7 @@
     <% if @refresh_tree_node
          node_data = {
            'id' => @digital_object_component.id,
+           'uri' => @digital_object_component.uri,
            'title' => @digital_object_component.title,
            'level' => false,
            'jsonmodel_type' => @digital_object_component.jsonmodel_type,
