--- a/frontend/app/views/digital_objects/_edit_inline.html.erb
+++ b/frontend/app/views/digital_objects/_edit_inline.html.erb
@@ -22,6 +22,7 @@
     <% if @refresh_tree_node
          node_data = {
            'id' => @digital_object.id,
+           'uri' => @digital_object.uri,
            'title' => @digital_object.title,
            'level' => I18n.t("enumerations.digital_object_level.#{@digital_object.level}", :default => @digital_object.level),
            'jsonmodel_type' => @digital_object.jsonmodel_type,
